<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinActivity">

    <TextView
        android:id="@+id/textoPuntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tPuntuacion"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/tPuntuaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tCantidad10"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoPuntos"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/bMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tPuntuaciones"
        app:layout_constraintVertical_bias="0.80" />
</androidx.constraintlayout.widget.ConstraintLayout>